# specpolFlow

./: .gitignore  README.md  Restructure.md  __init__.py  bz.py  cleanMask.py  cleanMaskSubroutines.py  cleanMaskUI.py  cleanmask.py  docs-jb-env.yml  io.py  iolsd.py  makeMask.py  old_rvFit.py  pyproject.toml  setup.py
.github/workflows/: deploy-book.yml
CommandLine/: bz.py  cleanMaskUI.py  makeMask.py  plotLSD.py  rvFit.py
CommandLineScripts/: Test_cmd.py  cleanMaskUI.py  makeMask.py  plotLSD.py
converters/: __init__.py  espadons.py
docs/: .buildinfo  API.html  Credits.html  Installation.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs-christi/source/: Installation.md  conf.py  index.rst
docs-jb/: _config.yml  _toc.yml  index.md
docs-jb/API/: API.rst  API_full.rst  Converters_API.rst  LSD_API.rst  LineList_API.rst  Mask_API.rst  Spectrum_API.rst
docs-jb/About/: Available_Polarimeters_and_Adapating_SPF.md  Available_Polarimeters_and_Adpating_SPF.md   Compatibilities_and_Instruments.md  Credits.md  Highlights.md  Installation.md  ReleaseNotes.md
docs-jb/Contributing/: Contributing.md
docs-jb/GetStarted/: .gitignore  7-LoopFlow_Tutorial.ipynb  ColabSetup_Tutorial.ipynb  Installation.md  LoopFlow_Tutorial.ipynb  NormalizingOneSpectrum.md  OneObservationFlow_Tutorial.ipynb  Quickstart_CLI.md
docs-jb/Tutorials/: 1-ConvertToSFiles_Tutorial.ipynb  10-SpectrumClass_Tutorial.ipynb  11-HowToLSD_Tutorial.ipynb  12-EquivalentWidth_Tutorial.ipynb  2-Normalizing_Tutorial.md  3-ExcludeMaskRegionClass_Tutorial.ipynb  3-MaskClass_Tutorial.ipynb  3b-MaskUI_Tutorial.md  4-ExcludeMaskRegionClass_Tutorial.ipynb  4-MaskClass_Tutorial.ipynb  5-LSDClass_Tutorial.ipynb  5b-LSDsonification_Tutorial.ipynb  6-CalculateBz_Tutorial.ipynb  6b-CalculateBzFromSingleLine_Tutorial.ipynb  7-CalculateBisector_Tutorial.ipynb  7-IndividualLine_Tutorial.ipynb  8-CalculateBisector_Tutorial.ipynb  8-IndividualLine_Tutorial.ipynb  9-LSDsonification_Tutorial.ipynb  (+4 more)
docs-src/: API copy.rst  readme.md
harmonicFit/: AvailableModels.ipynb  Bz.npy  BzFit_module.py  Colin_periodSearch-big.py  Colin_periodSearchExtra2.py  Example_with_MCMC.ipynb  Example_with_harmonic_fit.ipynb  Example_with_minimization.ipynb  phase.npy  readme.txt
old_specpolFlow/: iolsd.py  makeMask.py  old_cleanMaskSubroutines.py  old_cleanMaskUI.py
paper/: paper.bib  paper.md
specpolFlow/: LSDprofile.py  __init__.py  cleanMaskSubroutines.py  cleanMaskUI.py  cleanMaskUISubroutines.py  iolsd.py  lineList.py  mask.py  obsSpec.py  plotLineList.py  profileLSD.py  utils.py
tutorials/: 0-ColabSetup_Tutorial.ipynb  1-ConvertToSFiles_Tutorial.ipynb  3-MaskClass_Tutorial.ipynb  4-ExcludeMaskRegionClass_Tutorial.ipynb  5-LSDClass_Tutorial.ipynb  5b-LSDsonification_Tutorial.ipynb  7-LoopFlow_Tutorial.ipynb  9-EmissionLine_Tutorial.ipynb  9-IndividualLine_Tutorial.ipynb  CalculateBz.html  CalculateBz.ipynb  CalculateBz_Tutorial.ipynb  ColabSetup_Tutorial.ipynb  Convert.ipynb  ConvertToSFiles_Tutorial.ipynb  ExcludeMaskRegionClass_Tutorial.ipynb  ExcludeMaskRegionTutorial.ipynb  LSDClass_Tutorial.ipynb  LSDsonification.ipynb  LSDsonification_Tutorial.ipynb  LSDtutorial.ipynb  LoopFlow_Tutorial.ipynb  MOBSTER_Tutorial.ipynb  MaskClass_Tutorial.ipynb  Masktutorial.ipynb  OneObservationFlow_Tutorial.ipynb  SpecPolLoopTutorial.ipynb  SpecPolTutorial.ipynb  SpecPolTutorialTemplate.ipynb  Untitled.ipynb
(+93 files in other folders)
